[package]
name = "robust2d"
version = "0.1.0"
authors = ["andersforsgren <anders.forsgren@gmail.com>"]
build = "build.rs"
description = "Robust geometric predicates based on Jonathan Schewchuk's library https://www.cs.cmu.edu/~quake/robust.html"
license = "MIT"
keywords = ["geometry", "math", "robust", "predicates"]
readme = "readme.md"

[dependencies]
num  = "0.1.36"
matches = "0.1.4"
clippy = {version = "*", optional = true}

[build-dependencies]
gcc = "0.3.41"

[features]
default = []